# echo-server

./: Dockerfile  README.md  pyproject.toml  requirements.txt
src/echo/: cogni.yaml  server.py
